--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,10 @@ edition = "2018"
 
 [dependencies]
 cairo-rs = "^0"
-rand = "0.7.3"
+rand = "0.6"
+#rand = { version = "0.6", features = ["small_rng"] }
+poisson = "0.10.1"
+nalgebra = "0.17"
 
 [dependencies.gtk]
 version = "0.9.0"
