--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,8 @@
 [package]
-name = "gmapping_rs"
+name = "procmap"
 version = "0.1.0"
 authors = ["Garratt Gallagher <garratt@google.com>"]
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 cairo-rs = "^0"
@@ -13,6 +11,7 @@ rand = "0.6"
 poisson = "0.10.1"
 nalgebra = "0.17"
 voronator = "0.1.0"
+#math = "0.2.1"
 
 [dependencies.gtk]
 version = "0.9.0"
